force-app/main/default/objects/Product_Fee__c/Product_Fee__c.object-meta.xml
<CustomObject>
    <description>Store Fee, Volume, No. of Transaction by Product</description>
    <label>PF Product Fee Volume</label>
    <nameField>
        <displayFormat>PFF-{0000000}</displayFormat>
        <label>PF Product Fee Volume No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PF Product Fee Volume</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>