force-app/main/default/objects/Product_Fee__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>