force-app/main/default/objects/Product_Fee__c/fields/Fee_MTD__c.field-meta.xml
<CustomField>
    <fullName>Fee_MTD__c</fullName>
    <label>Fee (MTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>