force-app/main/default/objects/Product_Fee__c/fields/Fee_YTD__c.field-meta.xml
<CustomField>
    <fullName>Fee_YTD__c</fullName>
    <label>Fee (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>