force-app/main/default/objects/Product_Fee__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>