force-app/main/default/objects/Product_Fee__c/fields/Volume_MTD__c.field-meta.xml
<CustomField>
    <fullName>Volume_MTD__c</fullName>
    <label>Volume (MTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>